<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="controller"
            type="com.wessam.quizapp.ui.login.LoginActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background_green"
        android:layoutDirection="rtl"
        tools:context=".ui.login.LoginActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:transitionName="SPLASH_LOGO_TRANSITION"
            android:src="@drawable/logo_transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_2sdp"
            android:fontFamily="@font/cairo_bold"
            android:shadowColor="@color/black"
            android:shadowDx="1.5"
            android:shadowDy="1.3"
            android:shadowRadius="1.6"
            android:transitionName="SPLASH_TEXT_TRANSITION"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="email_text,password_text,login_button,create_user_button,skip_login_button"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="@drawable/border_green"
            android:fontFamily="@font/cairo_regular"
            android:gravity="start"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:padding="@dimen/_8sdp"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="@drawable/border_green"
            android:fontFamily="@font/cairo_regular"
            android:gravity="right"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lines="1"
            android:padding="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text"
            tools:ignore="RtlHardcoded" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="@drawable/button_green"
            android:fontFamily="@font/cairo_bold"
            android:onClick="@{() -> controller.signIn()}"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/create_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="@{() -> controller.openRegisterActivity()}"
            android:text="@string/not_have_account"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/darkGray"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/skip_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableStart="@drawable/ic_skip"
            android:fontFamily="@font/cairo_regular"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="@{() -> controller.openMainActivity()}"
            android:text="@string/cancel_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/darkGray"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>